feat(post): a post has a validated message

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :message, style: "display: block" %>
-    <%= form.text_field :message %>
+    <%= form.text_area :message %>
   </div>
 
   <div>
