--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,16 +1,14 @@
+<% content_for :stylesheets do %>
+  <%= stylesheet_link_tag "posts/index", "data-turbo-track": "reload" %>
+<% end %>
+
 <p style="color: green"><%= notice %></p>
 
 <h1>Posts</h1>
 
-<div id="posts">
+<div class="posts__index__list" id="posts">
   <% @posts.each do |post| %>
     <%= render post %>
-    <%= button_to post, method: :get do %>
-      <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
-        <title>Show this post</title>
-        <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-      </svg>
-    <% end %>
   <% end %>
 </div>
 
