--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -1,3 +1,8 @@
+.posts__index__list_container {
+  margin: auto;
+  width: fit-content;
+}
+
 .posts__index__list {
   align-items: center;
   display: flex;
