--- a/app/assets/stylesheets/posts/post.css
+++ b/app/assets/stylesheets/posts/post.css
@@ -3,12 +3,19 @@
   box-shadow: 0 3px 15px rgba(0, 0, 0, 20%);
   display: grid;
   grid-template-areas:
-    ". show_link"
+    "date show_link"
     "message message"
     ". .";
   grid-template-columns: 1fr auto;
   width: 50ch;
 }
+
+.posts__post__date {
+  align-items: center;
+  display: flex;
+  grid-area: date;
+}
+
 
 .posts__post__show_link {
   grid-area: show_link;
