refactor(post): consistent filename between view and stylesheet

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag "posts/post", "data-turbo-track": "reload" %>
+  <%= stylesheet_link_tag "posts/_post", "data-turbo-track": "reload" %>
 <% end %>
 
 <div class="posts__post__container" id="<%= dom_id post %>">
