feat(post): a post has many comments

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,22 @@
 <%= link_to "Back to posts", posts_path %>
 
 <%= render @post %>
+
+<h2>Comments</h2>
+<% @post.comments.each do |comment| %>
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.message %>
+  </p>
+<% end %>
+
+<h2>Post a Comment</h2>
+<%= form_with model: [@post, @post.comments.build] do |form| %>
+  <p>
+    <%= form.label :message %><br>
+    <%= form.text_area :message %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
