refactor(post): extract comment views

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,20 +5,7 @@
 <%= render @post %>
 
 <h2>Comments</h2>
-<% @post.comments.each do |comment| %>
-  <p>
-    <strong>Comment:</strong>
-    <%= comment.message %>
-  </p>
-<% end %>
+<%= render @post.comments %>
 
 <h2>Post a Comment</h2>
-<%= form_with model: [@post, @post.comments.build] do |form| %>
-  <p>
-    <%= form.label :message %><br>
-    <%= form.text_area :message %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= render "comments/form" %>
