--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -6,6 +6,12 @@
   <span class="comments__comment__date">
     <%= comment.created_at %>
   </span>
+  <%= button_to comment, form: { role: :presentation }, form_class: "comments__comment__delete_link", method: :delete do %>
+    <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+      <title>Delete this comment</title>
+      <path d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" />
+    </svg>
+  <% end %>
   <p class="comments__comment__message">
     <%= comment.message %>
   </p>
