feat(post): a post can be previewed
basic implementation for now.

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -6,23 +6,25 @@
   <span class="posts__post__date">
     <%= post.created_at %>
   </span>
-  <%= button_to post, form: { role: :presentation }, form_class: 'posts__post__show_link', method: :get do %>
-    <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
-      <title>Show this post</title>
-      <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
-    </svg>
-  <% end %>
-  <%= button_to edit_post_path(post), form: { role: :presentation }, form_class: "posts__post__edit_link", method: :get do %>
-    <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
-      <title>Edit this post</title>
-      <path d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z" />
-    </svg>
-  <% end %>
-  <%= button_to post, form: { role: :presentation }, form_class: "posts__post__delete_link", method: :delete do %>
-    <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
-      <title>Delete this post</title>
-      <path d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" />
-    </svg>
+  <% unless post.new_record? %>
+    <%= button_to post, form: { role: :presentation }, form_class: 'posts__post__show_link', method: :get do %>
+      <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+        <title>Show this post</title>
+        <path d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z" />
+      </svg>
+    <% end %>
+    <%= button_to edit_post_path(post), form: { role: :presentation }, form_class: "posts__post__edit_link", method: :get do %>
+      <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+        <title>Edit this post</title>
+        <path d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z" />
+      </svg>
+    <% end %>
+    <%= button_to post, form: { role: :presentation }, form_class: "posts__post__delete_link", method: :delete do %>
+      <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+        <title>Delete this post</title>
+        <path d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" />
+      </svg>
+    <% end %>
   <% end %>
   <p class="posts__post__message">
     <%= post.message %>
