--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -29,4 +29,7 @@
   <p class="posts__post__message">
     <%= post.message %>
   </p>
+  <span class="posts__post__comments">
+    <%= post.comments.count %> comments
+  </span>
 </div>
