--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,13 @@
-<%= form_with model: [@post, @post.comments.build] do |form| %>
-  <p>
-    <%= form.label :message %><br>
-    <%= form.text_area :message %>
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
+<% content_for :stylesheets do %>
+  <%= stylesheet_link_tag "comments/_form", "data-turbo-track": "reload" %>
+<% end %>
+
+<%= form_with class: "comments__form__container", model: [@post, @post.comments.build] do |form| %>
+  <%= form.text_area :message, "aria-label": "Message", class: "comments__form__message" %>
+  <%= form.button do %>
+    <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+      <path d="M11,9.8V10.7L12.7,10.9C15.3,11.3 17.2,12.3 18.6,13.6C16.9,13.1 15.1,12.8 13,12.8H11V14.1L8.8,12L11,9.8M13,5L6,12L13,19V14.9C18,14.9 21.5,16.5 24,20C23,15 20,10 13,9M7,8V5L0,12L7,19V16L3,12" />
+    </svg>
+    Reply
+  <% end %>
 <% end %>
