--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -1,8 +1,13 @@
-.posts__index__list {
+.posts__index__posts {
   align-items: center;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   list-style-type: none;
   padding: 0;
+}
+
+.posts__index__post {
+  border: 1px solid black;
+  border-radius: 5px;
 }
