--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -1,7 +1,7 @@
 .posts__show__post {
   border: 1px solid black;
   border-radius: 5px 5px 0 0;
-  margin: 0.5rem 0;
+  margin-top: 0.5rem;
 }
 
 .posts__show__comments {
