--- a/app/views/posts/preview.html.erb
+++ b/app/views/posts/preview.html.erb
@@ -1,3 +1,7 @@
+<% content_for :stylesheets do %>
+  <%= stylesheet_link_tag "posts/preview", "data-turbo-track": "reload" %>
+<% end %>
+
 <p style="color: green"><%= notice %></p>
 
 <%= button_to :back, form: { role: :presentation }, method: :get do %>
@@ -7,7 +11,9 @@
   Back
 <% end %>
 
-<%= render @post %>
+<div class="posts__preview__post">
+  <%= render @post %>
+</div>
 
 <%= form_with(model: @post) do |form| %>
   <%= form.hidden_field :message %>
