--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -32,6 +32,17 @@
     <%= post.message %>
   </p>
   <div class="posts__post__footer">
-    <%= post.comments.count %> comments
+    <% if post.reference.present? %>
+      <%= button_to post.reference, form: { role: :presentation }, method: :get do %>
+        <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+          <path d="M3.9,12C3.9,10.29 5.29,8.9 7,8.9H11V7H7A5,5 0 0,0 2,12A5,5 0 0,0 7,17H11V15.1H7C5.29,15.1 3.9,13.71 3.9,12M8,13H16V11H8V13M17,7H13V8.9H17C18.71,8.9 20.1,10.29 20.1,12C20.1,13.71 18.71,15.1 17,15.1H13V17H17A5,5 0 0,0 22,12A5,5 0 0,0 17,7Z" />
+        </svg>
+        &nbsp;
+        <%= post.reference %>
+      <% end %>
+    <% end %>
+    <span class="posts__post__comments_count">
+      <%= post.comments.count %> comments
+    </span>
   </div>
 </div>
