--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,6 +29,14 @@
     <% end %>
   </div>
   <%= text_area_tag "post[message]", post.message, "aria-label": "Message", class: "posts__form__message", form: "post-form", oninput: "this.style.height = `${this.scrollHeight}px`" %>
+  <div class="posts__form__footer">
+    <div class="posts_form__reference_container">
+      <svg height="1rem" viewBox="0 0 24 24" width="1rem" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7,7H11V9H7A3,3 0 0,0 4,12A3,3 0 0,0 7,15H11V17H7A5,5 0 0,1 2,12A5,5 0 0,1 7,7M17,7A5,5 0 0,1 22,12H20A3,3 0 0,0 17,9H13V7H17M8,11H16V13H8V11M17,12H19V15H22V17H19V20H17V17H14V15H17V12Z" />
+      </svg>
+      <%= text_field_tag "post[reference]", post.reference, "aria-label": "Reference", class: "posts_form__reference_input", form: "post-form" %>
+    </div>
+  </div>
 </div>
 
 <%= form_with(id: "post-form", model: post) do |form| %>
