--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= yield(:stylesheets).split("\n").uniq.join("\n").html_safe %>
     <%= javascript_importmap_tags %>
+    <%= yield(:javascripts).split("\n").uniq.join("\n").html_safe %>
   </head>
 
   <body>
