--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,6 +1,9 @@
 <% content_for :stylesheets do %>
   <%= stylesheet_link_tag "posts/_post", "data-turbo-track": "reload" %>
 <% end %>
+<% content_for :javascripts do %>
+  <%= javascript_include_tag "web-components/relative-timestamp", "data-turbo-track": "reload" %>
+<% end %>
 
 <div class="posts__post__container" id="<%= dom_id post %>">
   <div class="posts__post__header">
