fix(post): preserve white space on post and comments

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -29,9 +29,7 @@
       <% end %>
     <% end %>
   </div>
-  <p class="posts__post__message">
-    <%= post.message %>
-  </p>
+  <p class="posts__post__message"><%= post.message %></p>
   <div class="posts__post__footer">
     <% if post.reference.present? %>
       <%= button_to post.reference, form: { role: :presentation }, method: :get do %>
